Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL)
Description
http://buildbot.askmonty.org/buildbot/builders/xenial-amd64-valgrind/builds/183/steps/test/logs/stdio
Also reproducible locally with cmake . -DCMAKE_BUILD_TYPE=Debug -DWITH_VALGRIND=YES
main.myisam w3 [ fail ] Found warnings/errors in server log file!
|
Test ended at 2016-12-22 10:33:33
|
line
|
==10365== Thread 6:
|
==10365== Syscall param pwrite64(buf) points to uninitialised byte(s)
|
==10365== at 0x640EDE3: ??? (syscall-template.S:84)
|
==10365== by 0x10E4156: my_pwrite (my_pread.c:145)
|
==10365== by 0x103F582: inline_mysql_file_pwrite (mysql_file.h:1193)
|
==10365== by 0x103FD27: mi_nommap_pwrite (mi_dynrec.c:260)
|
==10365== by 0x1064DFD: _mi_write_static_record (mi_statrec.c:65)
|
==10365== by 0x1067A04: mi_write (mi_write.c:146)
|
==10365== by 0x101F4E0: ha_myisam::write_row(unsigned char*) (ha_myisam.cc:887)
|
==10365== by 0x924026: handler::ha_write_row(unsigned char*) (handler.cc:5956)
|
==10365== by 0x67EB99: write_record(THD*, TABLE*, COPY_INFO*) (sql_insert.cc:1890)
|
==10365== by 0x67C614: mysql_insert(THD*, TABLE_LIST*, List<Item>&, List<List<Item> >&, List<Item>&, List<Item>&, enum_duplicates, bool) (sql_insert.cc:1003)
|
==10365== by 0x6A4508: mysql_execute_command(THD*) (sql_parse.cc:4370)
|
==10365== by 0x6AFC4E: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7842)
|
==10365== Address 0xed29413 is 35 bytes inside a block of size 80 alloc'd
|
==10365== at 0x4C2DC5F: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
|
==10365== by 0x10E1ECA: my_malloc (my_malloc.c:100)
|
==10365== by 0x10D31AA: alloc_root (my_alloc.c:184)
|
==10365== by 0x7A20DB: open_table_from_share(THD*, TABLE_SHARE*, char const*, unsigned int, unsigned int, unsigned int, TABLE*, bool) (table.cc:3005)
|
==10365== by 0x62F93A: open_table(THD*, TABLE_LIST*, Open_table_context*) (sql_base.cc:1860)
|
==10365== by 0x6323BF: open_and_process_table(THD*, LEX*, TABLE_LIST*, unsigned int*, unsigned int, Prelocking_strategy*, bool, Open_table_context*) (sql_base.cc:3392)
|
==10365== by 0x63354D: open_tables(THD*, DDL_options_st const&, TABLE_LIST**, unsigned int*, unsigned int, Prelocking_strategy*) (sql_base.cc:3911)
|
==10365== by 0x679AEF: open_tables(THD*, TABLE_LIST**, unsigned int*, unsigned int) (sql_base.h:462)
|
==10365== by 0x730835: mysqld_show_create_get_fields(THD*, TABLE_LIST*, List<Item>*, String*) (sql_show.cc:1163)
|
==10365== by 0x730F0A: mysqld_show_create(THD*, TABLE_LIST*) (sql_show.cc:1259)
|
==10365== by 0x6A3B52: mysql_execute_command(THD*) (sql_parse.cc:4174)
|
==10365== by 0x6AFC4E: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7842)
|
maria.maria w7 [ fail ] Found warnings/errors in server log file!
|
Test ended at 2016-12-22 11:22:33
|
line
|
==13645== Thread 6:
|
==13645== Syscall param pwrite64(buf) points to uninitialised byte(s)
|
==13645== at 0x640EDE3: ??? (syscall-template.S:84)
|
==13645== by 0x10E4156: my_pwrite (my_pread.c:145)
|
==13645== by 0xB5B720: _ma_nommap_pwrite (ma_dynrec.c:219)
|
==13645== by 0xBC6151: _ma_write_static_record (ma_statrec.c:64)
|
==13645== by 0xBE5191: maria_write (ma_write.c:283)
|
==13645== by 0xB6B6EC: ha_maria::write_row(unsigned char*) (ha_maria.cc:1287)
|
==13645== by 0x924026: handler::ha_write_row(unsigned char*) (handler.cc:5956)
|
==13645== by 0x67EB99: write_record(THD*, TABLE*, COPY_INFO*) (sql_insert.cc:1890)
|
==13645== by 0x67C614: mysql_insert(THD*, TABLE_LIST*, List<Item>&, List<List<Item> >&, List<Item>&, List<Item>&, enum_duplicates, bool) (sql_insert.cc:1003)
|
==13645== by 0x6A4508: mysql_execute_command(THD*) (sql_parse.cc:4370)
|
==13645== by 0x6AFC4E: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7842)
|
==13645== by 0x69D551: dispatch_command(enum_server_command, THD*, char*, unsigned int, bool, bool) (sql_parse.cc:1799)
|
==13645== Address 0xf70e213 is 35 bytes inside a block of size 80 alloc'd
|
==13645== at 0x4C2DC5F: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
|
==13645== by 0x10E1ECA: my_malloc (my_malloc.c:100)
|
==13645== by 0x10D31AA: alloc_root (my_alloc.c:184)
|
==13645== by 0x7A20DB: open_table_from_share(THD*, TABLE_SHARE*, char const*, unsigned int, unsigned int, unsigned int, TABLE*, bool) (table.cc:3005)
|
==13645== by 0x62F93A: open_table(THD*, TABLE_LIST*, Open_table_context*) (sql_base.cc:1860)
|
==13645== by 0x6323BF: open_and_process_table(THD*, LEX*, TABLE_LIST*, unsigned int*, unsigned int, Prelocking_strategy*, bool, Open_table_context*) (sql_base.cc:3392)
|
==13645== by 0x63354D: open_tables(THD*, DDL_options_st const&, TABLE_LIST**, unsigned int*, unsigned int, Prelocking_strategy*) (sql_base.cc:3911)
|
==13645== by 0x679AEF: open_tables(THD*, TABLE_LIST**, unsigned int*, unsigned int) (sql_base.h:462)
|
==13645== by 0x730835: mysqld_show_create_get_fields(THD*, TABLE_LIST*, List<Item>*, String*) (sql_show.cc:1163)
|
==13645== by 0x730F0A: mysqld_show_create(THD*, TABLE_LIST*) (sql_show.cc:1259)
|
==13645== by 0x6A3B52: mysql_execute_command(THD*) (sql_parse.cc:4174)
|
==13645== by 0x6AFC4E: mysql_parse(THD*, char*, unsigned int, Parser_state*, bool, bool) (sql_parse.cc:7842)
|
Attachments
Issue Links
- relates to
-
MDEV-7069 Fix buildbot failures in main server trees
-
- Closed
-